# mythos-harness

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_TECHNICAL_OVERVIEW.md  README.md  justfile  learnings.md  mythosv3_architecture.md  pyproject.toml  workflow_state.md
config/: policy_rules.json
docs/: ARCHITECTURE.md  DECISION_RUNS.md  EVALUATION_STRATEGY.md
docs/plans/: 2026-04-24-mythos-quality-and-evals.md
evals/: aurora_prompt.txt  aurora_results.json
examples/pharma_second_opinion/: README.md
scripts/: apply_migrations.py  ask_mythos.py  eval_aurora.py
sql/: bootstrap_postgres.sql
sql/migrations/: 20260422_vector_16_to_1536.sql
src/mythos_harness/: __init__.py  config.py  main.py
src/mythos_harness/api/: __init__.py  middleware.py  observability.py  rate_limiter.py  router.py  schemas.py
src/mythos_harness/budget/: __init__.py  inference_budget.py
src/mythos_harness/core/: __init__.py  branch_manager.py  coda.py  feedback.py  json_utils.py  loop.py  prelude.py  safety.py  service.py  state.py  triage.py
src/mythos_harness/decision/: __init__.py  approval.py  audit_bundle.py  evidence_pack.py  memo.py  run.py
src/mythos_harness/embeddings/: __init__.py  base.py  factory.py  local.py  openai_compatible.py
src/mythos_harness/evals/: __init__.py  scorers.py
tests/: test_api.py  test_branch_manager.py  test_branch_model_config.py  test_decision_scaffold.py  test_embeddings.py  test_factories.py  test_middleware.py  test_reasoning_phases.py  test_retry.py  test_session_similarity.py  test_structured_state.py  test_triage.py  test_ui.py
(+21 files in other folders)
