[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mythos-harness"
version = "0.3.0"
description = "Mythos Harness v0.3: FastAPI + LangGraph orchestration runtime with structured latent state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "myceldigital" }
]
dependencies = [
  "fastapi>=0.115.0,<0.136.0",
  "uvicorn>=0.34.0,<0.46.0",
  "pydantic>=2.10.0,<2.13.0",
  "pydantic-settings>=2.6.0,<2.11.0",
  "langgraph>=0.2.72,<0.3.0",
  "httpx>=0.28.0,<0.29.0",
  "asyncpg>=0.29.0,<0.31.0",
  "redis>=5.0.0,<6.0.0",
  "prometheus-client>=0.21.0,<0.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
mythos-harness = "mythos_harness.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/mythos_harness"]

[tool.hatch.build.targets.wheel.force-include]
"src/mythos_harness/web" = "mythos_harness/web"

[tool.hatch.build.targets.sdist]
include = [
  "src/mythos_harness/web/**",
  "src/mythos_harness/**",
  "README.md",
  "pyproject.toml",
]
